src/test/ui/feature-gates/duplicate-features.stderr
error[E0636]: the feature `if_let` has already been declared
  --> $DIR/duplicate-features.rs:7:12
   |
LL | #![feature(if_let)]
   |            ^^^^^^

error[E0636]: the feature `dust1` has already been declared
  --> $DIR/duplicate-features.rs:4:12
   |
LL | #![feature(dust1)]
   |            ^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `dustc --explain E0636`.
