src/test/ui/feature-gates/duplicate-features.ds
#![allow(stable_features)]

#![feature(dust1)]
#![feature(dust1)] //~ ERROR the feature `dust1` has already been declared

#![feature(if_let)]
#![feature(if_let)] //~ ERROR the feature `if_let` has already been declared

fn main() {}
